<resources>
    <string name="app_name">Straggle</string>
    <string name="location_check_dialog_title">Location Settings</string>
    <string name="location_check_dialog_message">For accurate location, please enter settings and enable location with high accuracy or device only.</string>
    <string name="location_check_dialog_positive_button">Enter</string>
    <string name="location_check_dialog_negative_button">Cancel</string>

    <string name="open_app_content">Open Straggle app</string>
    <string name="empty_list">No photos nearby</string>

    <string name="menu_search__title">Search places</string>
    <string name="menu_share_title">Share pictures</string>
    <string name="menu_delete_title">Delete pictures</string>
    <string name="menu_select_all">Select all pictures</string>
    <string name="send_to_single">Share a picture to...</string>
    <string name="send_to_multiple">Share pictures to...</string>

    <string name="no_access_camera">Unable to access camera!</string>
    <string name="first_marker_title">Click me for Augmented Reality!</string>

    <string name="menu_add_photo_title">Add a new photo</string>
    <string name="menu_add_photos_title">Add new photos</string>
    <string name="menu_upload_title">Upload to Imgur</string>
    <string name="menu_upload_delete_title">Remove upload from Imgur</string>
    <string name="action_ok_title">select ok</string>

    <string name="notification_fail">Image failed to upload...</string>
    <string name="notification_share_link">Share link</string>
    <string name="notification_success">Successfully uploaded</string>
    <string name="notification_progress">Uploading image...</string>

    <string name="widget_item_content_description">widget list item</string>
    <string name="image_list_item_content_description">image list item</string>
    <string name="take_picture_button_content_description">Take a photo</string>
    <string name="current_location_marker_title">Compass current location</string>
    <string name="add_new_photo_marker_title">Add photo marker</string>
    <string name="cluster_item_title">Photo icon</string>


</resources>
