<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/select_all_icon_48"
        android:title="@string/menu_select_all"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_share_pictures"
        android:icon="@drawable/share_icon_48"
        android:title="@string/menu_share_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/trash_icon_48"
        android:title="@string/menu_delete_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/upload_icon_48"
        android:title="@string/menu_upload_title"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_upload_delete"
        android:icon="@drawable/upload_delete_icon_48"
        android:title="@string/menu_upload_delete_title"
        app:showAsAction="ifRoom|collapseActionView"/>

</menu>